syntax = "proto3";

package proto;

option go_package = "github.com/dipdup-net/indexer-sdk/pkg/modules/grpc/pb";

message DefaultRequest {}

message SubscribeResponse {
    uint64 id = 1;
}

message UnsubscribeRequest {
    uint64 id = 1;
}

message UnsubscribeResponse {
    uint64 id = 1;
    Message response = 2;
}

message Message {
    string message = 1;
}

enum SortOrder {
    ASC = 0;
    DESC = 1;
}

message Page {
    uint64 limit = 1;
    uint64 offset = 2;
    SortOrder order = 3;
}

enum Comparator {
    GT = 0;
    GTE = 1;
    LTE = 2;
    LT = 3;
    EQ = 4;
    NEQ = 5;
}

message Cursor {
    uint64 id = 1;
    uint64 limit = 2;
    SortOrder order = 3;
    Comparator comparator = 4;
}